fix colours, spacing, headers, IBM

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,13 +5,13 @@
 @layer base {
   html,
   body {
-    font-family: Inter, system-ui, sans-serif;
+    font-family: 'IBM Plex Sans', system-ui, sans-serif;
     margin: 0;
     padding: 0;
   }
 
   h1 {
-    @apply text-4xl font-bold text-gray-900;
+    @apply text-6xl font-bold text-gray-900;
   }
 
   h2 {
@@ -35,6 +35,12 @@
     @apply text-base text-gray-800;
   }
 
+  p,
+  li,
+  ul {
+    @apply text-gray-800;
+  }
+
   .prose p {
     @apply text-white !important;
   }
@@ -54,10 +60,6 @@
   .prose h3 a {
     @apply text-white no-underline;
   }
-  /* 
-  main a {
-    @apply underline text-black visited:text-black hover:text-black;
-  } */
 
   a,
   .a {
